--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "lib": ["es2017", "es7", "es6", "dom"],
+    "declarationMap": true,
+    "importHelpers": true,
+    "target": "ES2022",
+    "module": "ESNext",
+    "lib": ["es2020", "es5"],
     "declaration": true,
+    "rootDir": "./src",
     "outDir": "dist",
     "strict": true,
-    "esModuleInterop": true
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node16"
   },
-  "exclude": ["node_modules", "dist"]
+  "include": ["./src/**/*.ts"],
+  "exclude": []
 }
