--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/peersky/EthAAuthentication.git",
