--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "tsc && mocha",
-    "build": "tsc"
+    "build": "tsc --project tsconfig.esm.json",
+    "build-all": "npm run build && npm run build-commonjs",
+    "build-commonjs": "tsc --project tsconfig.commonjs.json"
   },
   "author": "Peersky",
   "license": "MIT",
@@ -29,5 +31,11 @@
     "url": "https://github.com/peersky/EthAAuthentication.git",
     "directory": "/"
   },
-  "homepage": "https://github.com/peersky/EthAAuthentication/blob/main/README.md"
+  "homepage": "https://github.com/peersky/EthAAuthentication/blob/main/README.md",
+  "exports": {
+    ".": {
+      "require": "./lib.commonjs/index.js",
+      "default": "./lib.esm/index.js"
+    }
+  }
 }
