--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@peersky/eth-auth",
-  "version": "1.0.1",
-  "type": "module",
+  "version": "1.0.2",
   "description": "Create and verify authentication token signed by an EOA",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./lib.commonjs/index.js",
+  "module": "./lib.esm/index.js",
   "scripts": {
     "test": "tsc && mocha",
     "build": "tsc --project tsconfig.esm.json",
